tests/compiletests/ui/lang/core/ref/member_ref_arg_tuples.stderr
warning: `#[inline(never)]` function `member_ref_arg_tuples::f` has been inlined
  --> <$DIR/member_ref_arg_tuples.rs>:16:4
   |
LL | fn f(x: &u32) -> u32 {
   |    ^
   |
   = note: inlining was required due to illegal (pointer) argument
   = note: called from `member_ref_arg_tuples::main`

warning: `#[inline(never)]` function `member_ref_arg_tuples::g` has been inlined
  --> <$DIR/member_ref_arg_tuples.rs>:21:4
   |
LL | fn g(xy: (&u32, &u32)) -> (u32, u32) {
   |    ^
   |
   = note: inlining was required due to illegal (pointer) argument
   = note: called from `member_ref_arg_tuples::main`

warning: `#[inline(never)]` function `member_ref_arg_tuples::h` has been inlined
  --> <$DIR/member_ref_arg_tuples.rs>:26:4
   |
LL | fn h(xyz: (&u32, &u32, &u32)) -> (u32, u32, u32) {
   |    ^
   |
   = note: inlining was required due to illegal parameter type
   = note: called from `member_ref_arg_tuples::main`

warning: `#[inline(never)]` function `member_ref_arg_tuples::h_newtyped` has been inlined
  --> <$DIR/member_ref_arg_tuples.rs>:38:4
   |
LL | fn h_newtyped(xyz: ((&u32, &u32, &u32),)) -> (u32, u32, u32) {
   |    ^^^^^^^^^^
   |
   = note: inlining was required due to illegal parameter type
   = note: called from `member_ref_arg_tuples::main`

error: `u64` type used without `OpCapability Int64`
   |
   = note: used by unnamed constant
note: used from within `member_ref_arg_tuples::main`
  --> <$DIR/member_ref_arg_tuples.rs>:44:13
   |
LL |     let s = S { x: 2, y: 2 };
   |             ^^^^^^^^^^^^^^^^
note: called by Fragment entry-point `main`
  --> <$DIR/member_ref_arg_tuples.rs>:43:8
   |
LL | pub fn main() {
   |        ^^^^

error: aborting due to 1 previous error; 4 warnings emitted

